[gd_scene load_steps=4 format=3 uid="uid://6i4tlf006ru"]

[ext_resource type="Script" uid="uid://crsw2cctqr8s5" path="res://control.gd" id="1_p6vtc"]
[ext_resource type="Texture2D" uid="uid://b3w66verb0yml" path="res://assets/clock_arrow.png" id="2_o7y7l"]
[ext_resource type="Texture2D" uid="uid://c8k8cwujibyop" path="res://assets/clock_arrow_down.png" id="3_kd8c6"]

[node name="EnemyPartyDesigner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6vtc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CurrentParty" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SizeControls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/CurrentParty"]
layout_mode = 2
alignment = 1

[node name="PartySizeLabel" type="Label" parent="HBoxContainer/VBoxContainer/CurrentParty/SizeControls"]
layout_mode = 2
text = "1"

[node name="SizeUpBtn" type="Button" parent="HBoxContainer/VBoxContainer/CurrentParty/SizeControls"]
layout_mode = 2
icon = ExtResource("2_o7y7l")

[node name="SizeDownBtn" type="Button" parent="HBoxContainer/VBoxContainer/CurrentParty/SizeControls"]
layout_mode = 2
icon = ExtResource("3_kd8c6")
icon_alignment = 1

[node name="EnemyContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/CurrentParty"]
layout_mode = 2

[node name="PartyTypeBtn" type="Button" parent="HBoxContainer/VBoxContainer/CurrentParty"]
layout_mode = 2

[node name="SpawnControls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/CurrentParty"]
layout_mode = 2

[node name="SpawnLabel" type="Label" parent="HBoxContainer/VBoxContainer/CurrentParty/SpawnControls"]
layout_mode = 2
text = "Spawn %: "

[node name="SpawnPercentageInput" type="SpinBox" parent="HBoxContainer/VBoxContainer/CurrentParty/SpawnControls"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="PartyManagement" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PartyList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PartyManagement"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PartyManagement"]
layout_mode = 2

[node name="AddPartyBtn" type="Button" parent="HBoxContainer/VBoxContainer/PartyManagement/Controls"]
layout_mode = 2
text = "Add Party"

[node name="RemovePartyBtn" type="Button" parent="HBoxContainer/VBoxContainer/PartyManagement/Controls"]
layout_mode = 2
text = "Remove Party"

[node name="PartySelect" type="OptionButton" parent="HBoxContainer/VBoxContainer/PartyManagement"]
layout_mode = 2

[node name="LevelStartPrompt" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelNumberLabel" type="Label" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2
text = "Level Number: "

[node name="LevelNumberInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2

[node name="LevelTitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2
text = "Level Name (Optional): "

[node name="LevelTitleInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2

[node name="LevelDescriptionLabel" type="Label" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2
text = "Level Description: "

[node name="LevelDescriptionInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2

[node name="PreviewBtn" type="Button" parent="HBoxContainer/VBoxContainer/LevelStartPrompt"]
layout_mode = 2
text = "Preview"

[node name="TutorialSystem" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TutorialList" type="ItemList" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2

[node name="TutorialTextLabel" type="Label" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2
text = "Tutorial Text: "

[node name="TutorialTextInput" type="TextEdit" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Enter Tutorial Text..."

[node name="TargetLabel" type="Label" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2
text = "Target Object: "

[node name="TargetSelect" type="OptionButton" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2

[node name="CoordinateControls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2

[node name="XLabel" type="Label" parent="HBoxContainer/VBoxContainer/TutorialSystem/CoordinateControls"]
layout_mode = 2
text = "X: "

[node name="XInput" type="SpinBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/CoordinateControls"]
layout_mode = 2

[node name="YLabel" type="Label" parent="HBoxContainer/VBoxContainer/TutorialSystem/CoordinateControls"]
layout_mode = 2
text = "Y: "

[node name="YInput" type="SpinBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/CoordinateControls"]
layout_mode = 2

[node name="TutorialModifiers" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2

[node name="BooleanModifiers" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TutorialSystem/TutorialModifiers"]
layout_mode = 2

[node name="TutorialDelay" type="CheckBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/TutorialModifiers/BooleanModifiers"]
layout_mode = 2
text = "Delay"

[node name="HoverBool" type="CheckBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/TutorialModifiers/BooleanModifiers"]
layout_mode = 2
text = "OnHover"

[node name="ImpatientBool" type="CheckBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/TutorialModifiers/BooleanModifiers"]
layout_mode = 2
text = "Timeout"

[node name="Controls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2

[node name="AddTutorialBtn" type="Button" parent="HBoxContainer/VBoxContainer/TutorialSystem/Controls"]
layout_mode = 2
text = "Add Tutorial"

[node name="RemoveTutorialBtn" type="Button" parent="HBoxContainer/VBoxContainer/TutorialSystem/Controls"]
layout_mode = 2
text = "Remove Tutorial"

[node name="TableControls" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/TutorialSystem"]
layout_mode = 2
alignment = 1

[node name="TableSizeField" type="SpinBox" parent="HBoxContainer/VBoxContainer/TutorialSystem/TableControls"]
layout_mode = 2
min_value = 2.0
max_value = 6.0
step = 2.0
value = 2.0

[node name="AddTableBtn" type="Button" parent="HBoxContainer/VBoxContainer/TutorialSystem/TableControls"]
layout_mode = 2
text = "Add Table"

[node name="RemoveTableBtn" type="Button" parent="HBoxContainer/VBoxContainer/TutorialSystem/TableControls"]
layout_mode = 2
text = "Remove Table"

[node name="LevelData" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DayTimeLabel" type="Label" parent="HBoxContainer/VBoxContainer/LevelData"]
layout_mode = 2
text = "Day Time: "

[node name="DayTimeInput" type="SpinBox" parent="HBoxContainer/VBoxContainer/LevelData"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="ExportBtn" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Export"

[node name="CoordinatePlotter" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="CoordinateLabel" type="Label" parent="HBoxContainer/CoordinatePlotter"]
layout_mode = 2
text = "Click on grid to set coordinates"

[node name="PlotCanvas" type="Control" parent="HBoxContainer/CoordinatePlotter"]
layout_mode = 2

[node name="PopupContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipPopup" type="PanelContainer" parent="PopupContainer"]
visible = false
layout_mode = 0
offset_left = -612.0
offset_top = -332.0
offset_right = -512.0
offset_bottom = -289.0

[node name="TooltipLabel" type="RichTextLabel" parent="PopupContainer/TooltipPopup"]
layout_mode = 2

[node name="AcceptDialog" type="AcceptDialog" parent="PopupContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="PopupContainer/AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 51.0

[node name="IntroLabel" type="RichTextLabel" parent="PopupContainer/AcceptDialog/VBoxContainer"]
layout_mode = 2

[node name="CloseBtn" type="Button" parent="PopupContainer/AcceptDialog/VBoxContainer"]
layout_mode = 2
